Implemented target_valuation_protocol within temperature_score pipeline

--- a/examples/getting_started.ipynb
+++ b/examples/getting_started.ipynb
@@ -244,7 +244,9 @@
    "metadata": {},
    "source": [
     "### Portfolio coverage\n",
-    "TODO: Add a description about what this value represents and how it's calculated."
+    "\n",
+    "Gives insights in the coverage of portfolio entities that has set GHG emissions reduction targets, STBi-validated or otherwise. Companies with SBTi status Approved \n",
+    "have a score of 100%, all others have a score of 0%. "
    ]
   },
   {
