#162 Update example to include logging

--- a/examples/1_getting_started.ipynb
+++ b/examples/1_getting_started.ipynb
@@ -44,6 +44,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Logging\n",
+    "The SBTi module uses the Python standard library logging utilities to send log messages. The log level can be changed according to the user's needs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "root_logger = logging.getLogger()\n",
+    "root_logger.setLevel(\"INFO\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Create a data provider\n",
     "Data providers let you connect to the data source of your choice."
    ]
