#184 Rename the target valuation protocol to target validation

--- a/examples/2_scenarios.ipynb
+++ b/examples/2_scenarios.ipynb
@@ -29,7 +29,7 @@
     "from SBTi.portfolio_aggregation import PortfolioAggregationMethod\n",
     "from SBTi.portfolio_coverage_tvp import PortfolioCoverageTVP\n",
     "from SBTi.temperature_score import TemperatureScore, Scenario, ScenarioType, EngagementType\n",
-    "from SBTi.target_valuation_protocol import TargetValuationProtocol\n",
+    "from SBTi.target_validation import TargetValidation\n",
     "%aimport -pandas\n",
     "import pandas as pd"
    ]
@@ -45,12 +45,17 @@
     "companies = portfolio[[\"company_id\", \"company_name\"]].to_dict(orient=\"records\")\n",
     "\n",
     "company_data = SBTi.data.get_company_data([provider], companies)\n",
-    "targets = SBTi.data.get_targets([provider], companies)\n",
-    "portfolio_data = pd.merge(left=company_data, right=targets, how='outer', on=['company_name', 'company_id'])\n",
+    "target_data = SBTi.data.get_targets([provider], companies)\n",
+    "company_data = pd.merge(left=company_data,\n",
+    "                        right=portfolio[\n",
+    "                            [column\n",
+    "                                for column in portfolio.columns\n",
+    "                                if column not in [\"company_name\"]]],\n",
+    "                        how=\"left\",\n",
+    "                        on=[\"company_id\"])\n",
     "\n",
-    "target_valuation_protocol = TargetValuationProtocol(portfolio_data, company_data)\n",
-    "portfolio_data = target_valuation_protocol.target_valuation_protocol()\n",
-    "portfolio_data = pd.merge(left=portfolio_data, right=portfolio, how='outer', on=['company_name', 'company_id'])"
+    "target_validation = TargetValidation(target_data, company_data)\n",
+    "portfolio_data = target_validation.target_validation()"
    ]
   },
   {
@@ -63,23 +68,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.0977"
+       "2.0568"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "temperature_score = TemperatureScore()\n",
-    "base_scenario = temperature_score.calculate(portfolio_data.copy(), [\"investment_value\"])\n",
+    "base_scenario = temperature_score.calculate(portfolio_data.copy())\n",
     "base_scenario_aggregated = temperature_score.aggregate_scores(base_scenario, PortfolioAggregationMethod.WATS, [])\n",
     "base_scenario_aggregated[\"short\"][\"s1s2s3\"][\"all\"][\"score\"]"
    ]
@@ -94,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,16 +112,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.2457"
+       "1.2048"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +129,7 @@
    "source": [
     "temperature_score = TemperatureScore()\n",
     "temperature_score.set_scenario(scenario)\n",
-    "scenario_one = temperature_score.calculate(portfolio_data.copy(), [\"investment_value\"])\n",
+    "scenario_one = temperature_score.calculate(portfolio_data.copy())\n",
     "scenario_one = temperature_score.aggregate_scores(scenario_one, PortfolioAggregationMethod.WATS, [])\n",
     "scenario_one[\"short\"][\"s1s2s3\"][\"all\"][\"score\"]"
    ]
@@ -139,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,16 +157,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.0824"
+       "1.012"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +174,7 @@
    "source": [
     "temperature_score = TemperatureScore()\n",
     "temperature_score.set_scenario(scenario)\n",
-    "scenario_two = temperature_score.calculate(portfolio_data.copy(), [\"investment_value\", \"engagement_target\"])\n",
+    "scenario_two = temperature_score.calculate(portfolio_data.copy())\n",
     "scenario_two = temperature_score.aggregate_scores(scenario_two, PortfolioAggregationMethod.WATS, [])\n",
     "scenario_two[\"short\"][\"s1s2s3\"][\"all\"][\"score\"]"
    ]
@@ -184,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,16 +202,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.8085"
+       "1.7667"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +219,7 @@
    "source": [
     "temperature_score = TemperatureScore()\n",
     "temperature_score.set_scenario(scenario)\n",
-    "scenario_two = temperature_score.calculate(portfolio_data.copy(), [\"investment_value\"])\n",
+    "scenario_two = temperature_score.calculate(portfolio_data.copy())\n",
     "scenario_two = temperature_score.aggregate_scores(scenario_two, PortfolioAggregationMethod.WATS, [])\n",
     "scenario_two[\"short\"][\"s1s2s3\"][\"all\"][\"score\"]"
    ]
@@ -229,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,16 +247,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.7482"
+       "1.7063"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +264,7 @@
    "source": [
     "temperature_score = TemperatureScore()\n",
     "temperature_score.set_scenario(scenario)\n",
-    "scenario_two = temperature_score.calculate(portfolio_data.copy(), [\"investment_value\"])\n",
+    "scenario_two = temperature_score.calculate(portfolio_data.copy())\n",
     "scenario_two = temperature_score.aggregate_scores(scenario_two, PortfolioAggregationMethod.WATS, [])\n",
     "scenario_two[\"short\"][\"s1s2s3\"][\"all\"][\"score\"]"
    ]
@@ -274,12 +279,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "scenario = Scenario()\n",
-    "scenario.scenario_type = ScenarioType.PREDEFINED_CONTRIBUTORS\n",
+    "scenario.scenario_type = ScenarioType.HIGHEST_CONTRIBUTORS_APPROVED\n",
     "scenario.engagement_type = EngagementType.SET_TARGETS\n",
     "scenario.aggregation_method = PortfolioAggregationMethod.WATS\n",
     "scenario.grouping = None"
@@ -287,16 +292,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.0113"
+       "1.9704"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +309,7 @@
    "source": [
     "temperature_score = TemperatureScore()\n",
     "temperature_score.set_scenario(scenario)\n",
-    "scenario_two = temperature_score.calculate(portfolio_data.copy(), [\"investment_value\"])\n",
+    "scenario_two = temperature_score.calculate(portfolio_data.copy())\n",
     "scenario_two = temperature_score.aggregate_scores(scenario_two, PortfolioAggregationMethod.WATS, [])\n",
     "scenario_two[\"short\"][\"s1s2s3\"][\"all\"][\"score\"]"
    ]
@@ -319,12 +324,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "scenario = Scenario()\n",
-    "scenario.scenario_type = ScenarioType.PREDEFINED_CONTRIBUTORS\n",
+    "scenario.scenario_type = ScenarioType.HIGHEST_CONTRIBUTORS_APPROVED\n",
     "scenario.engagement_type = EngagementType.SET_SBTI_TARGETS\n",
     "scenario.aggregation_method = PortfolioAggregationMethod.WATS\n",
     "scenario.grouping = None"
@@ -332,16 +337,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.992"
+       "1.9512"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +354,7 @@
    "source": [
     "temperature_score = TemperatureScore()\n",
     "temperature_score.set_scenario(scenario)\n",
-    "scenario_two = temperature_score.calculate(portfolio_data.copy(), [\"investment_value\"])\n",
+    "scenario_two = temperature_score.calculate(portfolio_data.copy())\n",
     "scenario_two = temperature_score.aggregate_scores(scenario_two, PortfolioAggregationMethod.WATS, [])\n",
     "scenario_two[\"short\"][\"s1s2s3\"][\"all\"][\"score\"]"
    ]
