--- a/examples/3_portfolio_aggregations.ipynb
+++ b/examples/3_portfolio_aggregations.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,14 +29,14 @@
     "from SBTi.portfolio_aggregation import PortfolioAggregationMethod\n",
     "from SBTi.portfolio_coverage_tvp import PortfolioCoverageTVP\n",
     "from SBTi.temperature_score import TemperatureScore, Scenario, ScenarioType, EngagementType\n",
-    "from SBTi.target_valuation_protocol import TargetValuationProtocol\n",
+    "from SBTi.target_validation import TargetValidation\n",
     "%aimport -pandas\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,22 +45,27 @@
     "companies = portfolio[[\"company_id\", \"company_name\"]].to_dict(orient=\"records\")\n",
     "\n",
     "company_data = SBTi.data.get_company_data([provider], companies)\n",
-    "targets = SBTi.data.get_targets([provider], companies)\n",
-    "portfolio_data = pd.merge(left=company_data, right=targets, how='outer', on=['company_name', 'company_id'])\n",
+    "target_data = SBTi.data.get_targets([provider], companies)\n",
+    "company_data = pd.merge(left=company_data,\n",
+    "                        right=portfolio[\n",
+    "                            [column\n",
+    "                                for column in portfolio.columns\n",
+    "                                if column not in [\"company_name\"]]],\n",
+    "                        how=\"left\",\n",
+    "                        on=[\"company_id\"])\n",
     "\n",
-    "target_valuation_protocol = TargetValuationProtocol(portfolio_data, company_data)\n",
-    "portfolio_data = target_valuation_protocol.target_valuation_protocol()\n",
-    "portfolio_data = pd.merge(left=portfolio_data, right=portfolio, how='outer', on=['company_name', 'company_id'])"
+    "target_validation = TargetValidation(target_data, company_data)\n",
+    "portfolio_data = target_validation.target_validation()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "temperature_score = TemperatureScore()\n",
-    "amended_portfolio = temperature_score.calculate(portfolio_data, [\"investment_value\"])"
+    "amended_portfolio = temperature_score.calculate(portfolio_data)"
    ]
   },
   {
@@ -73,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,19 +99,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "short - s1s2: 1.4629 degrees celcius\n",
-      "short - s3: 2.3409 degrees celcius\n",
-      "short - s1s2s3: 2.0977 degrees celcius\n",
-      "mid - s1s2: 2.5923 degrees celcius\n",
-      "mid - s3: 2.9923 degrees celcius\n",
-      "mid - s1s2s3: 2.8998 degrees celcius\n",
+      "short - s1s2: 1.4616 degrees celcius\n",
+      "short - s3: 2.2855 degrees celcius\n",
+      "short - s1s2s3: 2.0568 degrees celcius\n",
+      "mid - s1s2: 2.5903 degrees celcius\n",
+      "mid - s3: 2.9874 degrees celcius\n",
+      "mid - s1s2s3: 2.8962 degrees celcius\n",
       "long - s1s2: 3.0814 degrees celcius\n",
       "long - s3: 3.191 degrees celcius\n",
       "long - s1s2s3: 3.155 degrees celcius\n"
@@ -127,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -135,11 +140,11 @@
      "output_type": "stream",
      "text": [
       "short - s1s2: 1.6343 degrees celcius\n",
-      "short - s3: 2.3879 degrees celcius\n",
-      "short - s1s2s3: 2.0774 degrees celcius\n",
-      "mid - s1s2: 2.681 degrees celcius\n",
-      "mid - s3: 2.3564 degrees celcius\n",
-      "mid - s1s2s3: 2.5294 degrees celcius\n",
+      "short - s3: 2.3596 degrees celcius\n",
+      "short - s1s2s3: 2.0569 degrees celcius\n",
+      "mid - s1s2: 2.6795 degrees celcius\n",
+      "mid - s3: 2.356 degrees celcius\n",
+      "mid - s1s2s3: 2.5285 degrees celcius\n",
       "long - s1s2: 2.8646 degrees celcius\n",
       "long - s3: 3.1986 degrees celcius\n",
       "long - s1s2s3: 3.0562 degrees celcius\n"
@@ -160,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -168,11 +173,11 @@
      "output_type": "stream",
      "text": [
       "short - s1s2: 2.2805 degrees celcius\n",
-      "short - s3: 2.251 degrees celcius\n",
-      "short - s1s2s3: 2.2568 degrees celcius\n",
-      "mid - s1s2: 2.5231 degrees celcius\n",
-      "mid - s3: 2.2171 degrees celcius\n",
-      "mid - s1s2s3: 2.3563 degrees celcius\n",
+      "short - s3: 2.2329 degrees celcius\n",
+      "short - s1s2s3: 2.2436 degrees celcius\n",
+      "mid - s1s2: 2.5202 degrees celcius\n",
+      "mid - s3: 2.2111 degrees celcius\n",
+      "mid - s1s2s3: 2.3514 degrees celcius\n",
       "long - s1s2: 3.0193 degrees celcius\n",
       "long - s3: 3.1991 degrees celcius\n",
       "long - s1s2s3: 3.1226 degrees celcius\n"
@@ -194,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -202,11 +207,11 @@
      "output_type": "stream",
      "text": [
       "short - s1s2: 2.4141 degrees celcius\n",
-      "short - s3: 2.1479 degrees celcius\n",
-      "short - s1s2s3: 2.2477 degrees celcius\n",
-      "mid - s1s2: 2.2584 degrees celcius\n",
-      "mid - s3: 1.9427 degrees celcius\n",
-      "mid - s1s2s3: 2.1051 degrees celcius\n",
+      "short - s3: 2.1272 degrees celcius\n",
+      "short - s1s2s3: 2.2326 degrees celcius\n",
+      "mid - s1s2: 2.2536 degrees celcius\n",
+      "mid - s3: 1.9381 degrees celcius\n",
+      "mid - s1s2s3: 2.1005 degrees celcius\n",
       "long - s1s2: 3.0438 degrees celcius\n",
       "long - s3: 3.1988 degrees celcius\n",
       "long - s1s2s3: 3.1328 degrees celcius\n"
@@ -227,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -235,11 +240,11 @@
      "output_type": "stream",
      "text": [
       "short - s1s2: 2.3732 degrees celcius\n",
-      "short - s3: 2.2215 degrees celcius\n",
-      "short - s1s2s3: 2.2732 degrees celcius\n",
-      "mid - s1s2: 2.3592 degrees celcius\n",
-      "mid - s3: 2.148 degrees celcius\n",
-      "mid - s1s2s3: 2.2691 degrees celcius\n",
+      "short - s3: 2.1979 degrees celcius\n",
+      "short - s1s2s3: 2.2561 degrees celcius\n",
+      "mid - s1s2: 2.3555 degrees celcius\n",
+      "mid - s3: 2.1428 degrees celcius\n",
+      "mid - s1s2s3: 2.2645 degrees celcius\n",
       "long - s1s2: 3.0128 degrees celcius\n",
       "long - s3: 3.1987 degrees celcius\n",
       "long - s1s2s3: 3.1196 degrees celcius\n"
@@ -260,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -268,11 +273,11 @@
      "output_type": "stream",
      "text": [
       "short - s1s2: 1.6998 degrees celcius\n",
-      "short - s3: 0.4567 degrees celcius\n",
-      "short - s1s2s3: 0.7972 degrees celcius\n",
-      "mid - s1s2: 1.886 degrees celcius\n",
-      "mid - s3: 2.8486 degrees celcius\n",
-      "mid - s1s2s3: 2.5815 degrees celcius\n",
+      "short - s3: 0.3551 degrees celcius\n",
+      "short - s1s2s3: 0.7233 degrees celcius\n",
+      "mid - s1s2: 1.8851 degrees celcius\n",
+      "mid - s3: 2.8335 degrees celcius\n",
+      "mid - s1s2s3: 2.5721 degrees celcius\n",
       "long - s1s2: 2.8956 degrees celcius\n",
       "long - s3: 3.1962 degrees celcius\n",
       "long - s1s2s3: 3.0681 degrees celcius\n"
