#192 Also download the portfolio

--- a/examples/1_getting_started-colab.ipynb
+++ b/examples/1_getting_started-colab.ipynb
@@ -59,7 +59,8 @@
     "import urllib.request\n",
     "import os\n",
     "os.mkdir(\"data\")\n",
-    "urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/data/data_provider_example.xlsx\", \"data/data_provider_example.xlsx\")"
+    "urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/data/data_provider_example.xlsx\", \"data/data_provider_example.xlsx\")\n",
+    "urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/example_portfolio.csv\", \"example_portfolio.csv\")"
    ]
   },
   {
