#192 Update Colab notebook

--- a/examples/1_getting_started-colab.ipynb
+++ b/examples/1_getting_started-colab.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install git+git://github.com/OFBDABV/SBTi"
+    "!pip install SBTi"
    ]
   },
   {
@@ -229,6 +229,15 @@
     "    for time_frame, time_frame_values in aggregations.items():\n",
     "        for scope, scope_values in time_frame_values.items():\n",
     "            print(\"{} - {}: {} degrees celcius\".format(time_frame, scope, scope_values[\"all\"][\"score\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print_aggregations(temperature_score.aggregate_scores(amended_portfolio, PortfolioAggregationMethod.WATS, []))"
    ]
   },
   {
