--- a/examples/3_portfolio_aggregations.ipynb
+++ b/examples/3_portfolio_aggregations.ipynb
@@ -18,7 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Only required if you didn't install the module yet\n",
+    "!pip install SBTi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +46,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download the dummy data\n",
+    "import urllib.request\n",
+    "import os\n",
+    "\n",
+    "if not os.path.isdir(\"data\"):\n",
+    "    os.mkdir(\"data\")\n",
+    "if not os.path.isfile(\"data/data_provider_example.xlsx\"):\n",
+    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/data/data_provider_example.xlsx\", \"data/data_provider_example.xlsx\")\n",
+    "if not os.path.isfile(\"example_portfolio.csv\"):\n",
+    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/example_portfolio.csv\", \"example_portfolio.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,25 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "short - s1s2: 1.4616 degrees celcius\n",
-      "short - s3: 2.2855 degrees celcius\n",
-      "short - s1s2s3: 2.0568 degrees celcius\n",
-      "mid - s1s2: 2.5903 degrees celcius\n",
-      "mid - s3: 2.9874 degrees celcius\n",
-      "mid - s1s2s3: 2.8962 degrees celcius\n",
-      "long - s1s2: 3.0814 degrees celcius\n",
-      "long - s3: 3.191 degrees celcius\n",
-      "long - s1s2s3: 3.155 degrees celcius\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print_aggregations(temperature_score.aggregate_scores(amended_portfolio, PortfolioAggregationMethod.WATS, []))"
    ]
@@ -132,25 +144,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "short - s1s2: 1.6343 degrees celcius\n",
-      "short - s3: 2.3596 degrees celcius\n",
-      "short - s1s2s3: 2.0569 degrees celcius\n",
-      "mid - s1s2: 2.6795 degrees celcius\n",
-      "mid - s3: 2.356 degrees celcius\n",
-      "mid - s1s2s3: 2.5285 degrees celcius\n",
-      "long - s1s2: 2.8646 degrees celcius\n",
-      "long - s3: 3.1986 degrees celcius\n",
-      "long - s1s2s3: 3.0562 degrees celcius\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print_aggregations(temperature_score.aggregate_scores(amended_portfolio, PortfolioAggregationMethod.TETS, []))"
    ]
@@ -165,25 +161,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "short - s1s2: 2.2805 degrees celcius\n",
-      "short - s3: 2.2329 degrees celcius\n",
-      "short - s1s2s3: 2.2436 degrees celcius\n",
-      "mid - s1s2: 2.5202 degrees celcius\n",
-      "mid - s3: 2.2111 degrees celcius\n",
-      "mid - s1s2s3: 2.3514 degrees celcius\n",
-      "long - s1s2: 3.0193 degrees celcius\n",
-      "long - s3: 3.1991 degrees celcius\n",
-      "long - s1s2s3: 3.1226 degrees celcius\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print_aggregations(temperature_score.aggregate_scores(amended_portfolio, PortfolioAggregationMethod.MOTS, []))"
    ]
@@ -199,25 +179,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "short - s1s2: 2.4141 degrees celcius\n",
-      "short - s3: 2.1272 degrees celcius\n",
-      "short - s1s2s3: 2.2326 degrees celcius\n",
-      "mid - s1s2: 2.2536 degrees celcius\n",
-      "mid - s3: 1.9381 degrees celcius\n",
-      "mid - s1s2s3: 2.1005 degrees celcius\n",
-      "long - s1s2: 3.0438 degrees celcius\n",
-      "long - s3: 3.1988 degrees celcius\n",
-      "long - s1s2s3: 3.1328 degrees celcius\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print_aggregations(temperature_score.aggregate_scores(amended_portfolio, PortfolioAggregationMethod.EOTS, []))"
    ]
@@ -232,25 +196,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "short - s1s2: 2.3732 degrees celcius\n",
-      "short - s3: 2.1979 degrees celcius\n",
-      "short - s1s2s3: 2.2561 degrees celcius\n",
-      "mid - s1s2: 2.3555 degrees celcius\n",
-      "mid - s3: 2.1428 degrees celcius\n",
-      "mid - s1s2s3: 2.2645 degrees celcius\n",
-      "long - s1s2: 3.0128 degrees celcius\n",
-      "long - s3: 3.1987 degrees celcius\n",
-      "long - s1s2s3: 3.1196 degrees celcius\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print_aggregations(temperature_score.aggregate_scores(amended_portfolio, PortfolioAggregationMethod.ECOTS, []))"
    ]
@@ -265,25 +213,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "short - s1s2: 1.6998 degrees celcius\n",
-      "short - s3: 0.3551 degrees celcius\n",
-      "short - s1s2s3: 0.7233 degrees celcius\n",
-      "mid - s1s2: 1.8851 degrees celcius\n",
-      "mid - s3: 2.8335 degrees celcius\n",
-      "mid - s1s2s3: 2.5721 degrees celcius\n",
-      "long - s1s2: 2.8956 degrees celcius\n",
-      "long - s3: 3.1962 degrees celcius\n",
-      "long - s1s2s3: 3.0681 degrees celcius\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print_aggregations(temperature_score.aggregate_scores(amended_portfolio, PortfolioAggregationMethod.AOTS, []))"
    ]
