--- a/examples/1_getting_started.ipynb
+++ b/examples/1_getting_started.ipynb
@@ -250,7 +250,7 @@
    "metadata": {},
    "source": [
     "### Load the data\n",
-    "We'll call the data provider and ask it to provide us with the targets and the company data."
+    "We'll call the data provider and ask it to provide us with the targets and the company data. This will take care of all required preprocessing."
    ]
   },
   {
@@ -260,36 +260,6 @@
    "outputs": [],
    "source": [
     "portfolio_data = SBTi.utils.get_data([provider], companies)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Validate the targets\n",
-    "We've now got our portfolio, amended with target data. Now we need to make sure that all the targets are valid (e.g. they haven't been reached yet and their end date isn't in the past)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'TargetValidation' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-13-15b325904a26>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtarget_validation\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTargetValidation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtarget_data\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcompany_data\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mportfolio_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtarget_validation\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtarget_validation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'TargetValidation' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "target_validation = TargetProtocol(target_data, company_data)\n",
-    "portfolio_data = target_validation.target_validation()"
    ]
   },
   {
