#212 Update notebook (halfway)

--- a/examples/2_scenarios.ipynb
+++ b/examples/2_scenarios.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,14 +39,15 @@
     "from SBTi.portfolio_aggregation import PortfolioAggregationMethod\n",
     "from SBTi.portfolio_coverage_tvp import PortfolioCoverageTVP\n",
     "from SBTi.temperature_score import TemperatureScore, Scenario, ScenarioType, EngagementType\n",
-    "from SBTi.target_validation import TargetValidation\n",
+    "from SBTi.target_validation import TargetProtocol\n",
+    "from SBTi.interfaces import ETimeFrames, EScope\n",
     "%aimport -pandas\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -72,20 +73,8 @@
    "source": [
     "provider = ExcelProvider(path=\"data/data_provider_example.xlsx\")\n",
     "portfolio = pd.read_csv(\"example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
-    "companies = portfolio[[\"company_id\", \"company_name\"]].to_dict(orient=\"records\")\n",
-    "\n",
-    "company_data = SBTi.data.get_company_data([provider], companies)\n",
-    "target_data = SBTi.data.get_targets([provider], companies)\n",
-    "company_data = pd.merge(left=company_data,\n",
-    "                        right=portfolio[\n",
-    "                            [column\n",
-    "                                for column in portfolio.columns\n",
-    "                                if column not in [\"company_name\"]]],\n",
-    "                        how=\"left\",\n",
-    "                        on=[\"company_id\"])\n",
-    "\n",
-    "target_validation = TargetValidation(target_data, company_data)\n",
-    "portfolio_data = target_validation.target_validation()"
+    "companies = [SBTi.interfaces.PortfolioCompany.parse_obj(company) for company in portfolio.to_dict(orient=\"records\")]\n",
+    "portfolio_data = SBTi.utils.get_data([provider], companies)"
    ]
   },
   {
@@ -98,15 +87,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_frames = list(SBTi.interfaces.ETimeFrames), \n",
+    "scopes = [EScope.S1S2, EScope.S3, EScope.S1S2S3],"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'copy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-5e31d35db43d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mtemperature_score\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTemperatureScore\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtime_frames\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtime_frames\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscopes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mscopes\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mbase_scenario\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtemperature_score\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcalculate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mportfolio_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mbase_scenario_aggregated\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtemperature_score\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maggregate_scores\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbase_scenario\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mbase_scenario_aggregated\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"short\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"s1s2s3\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"all\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"score\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\users\\janthiemenp\\development\\sbti\\SBTi\\temperature_score.py\u001b[0m in \u001b[0;36mcalculate\u001b[1;34m(self, data)\u001b[0m\n\u001b[0;32m    344\u001b[0m         \u001b[1;33m:\u001b[0m\u001b[1;32mreturn\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mA\u001b[0m \u001b[0mdata\u001b[0m \u001b[0mframe\u001b[0m \u001b[0mcontaining\u001b[0m \u001b[0mall\u001b[0m \u001b[0mrelevant\u001b[0m \u001b[0minformation\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mtargets\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mcompanies\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    345\u001b[0m         \"\"\"\n\u001b[1;32m--> 346\u001b[1;33m         \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_prepare_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    347\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    348\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mEScope\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mS1S2S3\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscopes\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\users\\janthiemenp\\development\\sbti\\SBTi\\temperature_score.py\u001b[0m in \u001b[0;36m_prepare_data\u001b[1;34m(self, data)\u001b[0m\n\u001b[0;32m    297\u001b[0m         \"\"\"\n\u001b[0;32m    298\u001b[0m         \u001b[1;31m# If scope S1S2S3 is in the list of scopes to calculate, we need to calculate the other two as well\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 299\u001b[1;33m         \u001b[0mscopes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscopes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    300\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mEScope\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mS1S2S3\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscopes\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mEScope\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mS1S2\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscopes\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    301\u001b[0m             \u001b[0mscopes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mEScope\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mS1S2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'copy'"
+     ]
+    }
+   ],
    "source": [
-    "temperature_score = TemperatureScore()\n",
+    "temperature_score = TemperatureScore(time_frames=time_frames, scopes=scopes)\n",
     "base_scenario = temperature_score.calculate(portfolio_data.copy())\n",
-    "base_scenario_aggregated = temperature_score.aggregate_scores(base_scenario, PortfolioAggregationMethod.WATS, [])\n",
+    "base_scenario_aggregated = temperature_score.aggregate_scores(base_scenario)\n",
     "base_scenario_aggregated[\"short\"][\"s1s2s3\"][\"all\"][\"score\"]"
    ]
   },
@@ -137,10 +150,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temperature_score = TemperatureScore()\n",
+    "temperature_score = TemperatureScore(time_frames=time_frames, scopes=scopes, aggregation_method=PortfolioAggregationMethod.WATS)\n",
     "temperature_score.set_scenario(scenario)\n",
     "scenario_one = temperature_score.calculate(portfolio_data.copy())\n",
-    "scenario_one = temperature_score.aggregate_scores(scenario_one, PortfolioAggregationMethod.WATS, [])\n",
+    "base_scenario_aggregated = temperature_score.aggregate_scores(base_scenario)\n",
     "scenario_one[\"short\"][\"s1s2s3\"][\"all\"][\"score\"]"
    ]
   },
@@ -171,10 +184,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temperature_score = TemperatureScore()\n",
+    "temperature_score = TemperatureScore(time_frames=time_frames, scopes=scopes, aggregation_method=PortfolioAggregationMethod.WATS)\n",
     "temperature_score.set_scenario(scenario)\n",
     "scenario_two = temperature_score.calculate(portfolio_data.copy())\n",
-    "scenario_two = temperature_score.aggregate_scores(scenario_two, PortfolioAggregationMethod.WATS, [])\n",
+    "base_scenario_aggregated = temperature_score.aggregate_scores(base_scenario)\n",
     "scenario_two[\"short\"][\"s1s2s3\"][\"all\"][\"score\"]"
    ]
   },
@@ -205,10 +218,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temperature_score = TemperatureScore()\n",
+    "temperature_score = TemperatureScore(time_frames=time_frames, scopes=scopes, aggregation_method=PortfolioAggregationMethod.WATS)\n",
     "temperature_score.set_scenario(scenario)\n",
     "scenario_two = temperature_score.calculate(portfolio_data.copy())\n",
-    "scenario_two = temperature_score.aggregate_scores(scenario_two, PortfolioAggregationMethod.WATS, [])\n",
+    "base_scenario_aggregated = temperature_score.aggregate_scores(base_scenario)\n",
     "scenario_two[\"short\"][\"s1s2s3\"][\"all\"][\"score\"]"
    ]
   },
@@ -239,10 +252,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temperature_score = TemperatureScore()\n",
+    "temperature_score = TemperatureScore(time_frames=time_frames, scopes=scopes, aggregation_method=PortfolioAggregationMethod.WATS)\n",
     "temperature_score.set_scenario(scenario)\n",
     "scenario_two = temperature_score.calculate(portfolio_data.copy())\n",
-    "scenario_two = temperature_score.aggregate_scores(scenario_two, PortfolioAggregationMethod.WATS, [])\n",
+    "base_scenario_aggregated = temperature_score.aggregate_scores(base_scenario)\n",
     "scenario_two[\"short\"][\"s1s2s3\"][\"all\"][\"score\"]"
    ]
   },
@@ -273,10 +286,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temperature_score = TemperatureScore()\n",
+    "temperature_score = TemperatureScore(time_frames=time_frames, scopes=scopes, aggregation_method=PortfolioAggregationMethod.WATS)\n",
     "temperature_score.set_scenario(scenario)\n",
     "scenario_two = temperature_score.calculate(portfolio_data.copy())\n",
-    "scenario_two = temperature_score.aggregate_scores(scenario_two, PortfolioAggregationMethod.WATS, [])\n",
+    "base_scenario_aggregated = temperature_score.aggregate_scores(base_scenario)\n",
     "scenario_two[\"short\"][\"s1s2s3\"][\"all\"][\"score\"]"
    ]
   },
@@ -307,10 +320,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temperature_score = TemperatureScore()\n",
+    "temperature_score = TemperatureScore(time_frames=time_frames, scopes=scopes, aggregation_method=PortfolioAggregationMethod.WATS)\n",
     "temperature_score.set_scenario(scenario)\n",
     "scenario_two = temperature_score.calculate(portfolio_data.copy())\n",
-    "scenario_two = temperature_score.aggregate_scores(scenario_two, PortfolioAggregationMethod.WATS, [])\n",
+    "base_scenario_aggregated = temperature_score.aggregate_scores(base_scenario)\n",
     "scenario_two[\"short\"][\"s1s2s3\"][\"all\"][\"score\"]"
    ]
   }
